# cardcode

./: .gitignore  CMakeLists.txt  HANDOFF.md  README.md  cardcode_editor.html  idf_component.yml  package.json
app/: cardcode-default.manifest.json  index.html  styles.css
app/src/: app.js  edit.js  generator.js  manifest.js  parser.js  projection.js  render.js  state.js  transport.js
app/tests/: app-shell.test.js  app.test.js  builder.test.js  dev-server.test.js  edit.test.js  generator.test.js  manifest.test.js  parser.test.js  projection.test.js  render.test.js  smoke.test.js  state.test.js  transport.test.js
docs/integration/: README.md  card-manifest.md  esp-idf-component-guide.md  esp32.md  idf-6.0.1-http-server-reference.md  local-harness.md  protocol.md
docs/superpowers/plans/: 2026-06-07-cardcode-ui.md  2026-06-07-doc-fixes-handoff.md
docs/superpowers/specs/: 2026-06-06-variables-and-functions-design.md  2026-06-07-cardcode-ui-design.md
examples/: approach.ccode  line.ccode  obstacle.ccode  patrol.ccode  square.ccode
harness/: forwarding_host.hpp  json.hpp  json_event_sink.hpp  main.cpp  protocol_bridge.hpp
idf_component/: CMakeLists.txt  idf_component.yml
include/cardcode/: ast.hpp  compiler.hpp  diagnostic.hpp  engine.hpp  events.hpp  lexer.hpp  mock_robot_host.hpp  parser.hpp  robot_host.hpp  source_span.hpp  value.hpp
src/: compiler.cpp  engine.cpp  lexer.cpp  parser.cpp
tests/: CMakeLists.txt  test_cancel.cpp  test_compiler.cpp  test_conditions.cpp  test_errors.cpp  test_execution.cpp  test_functions.cpp  test_harness.cpp  test_ids.cpp  test_lexer.cpp  test_parser.cpp  test_variables.cpp  test_while.cpp
tools/: cardcode_run.cpp  dev-server.js
